# bnp-playground

./: README.md  pyproject.toml
bnp/: column_types.py  components.py
bnp/crosscat/: v3.py
bnp/dpmm/: v1.py  v2.py
bnp/hirm/: v1.py
bnp/hybrid/: schema.py  v1.py  v2.py  v3.py
bnp/irm/: relation.py
bnp/pclean/: schema.py  v1.py
examples/: components_examples.py  examples.py
src/bnp/: components.py
src/bnp/crosscat/: v1.py  v2.py
src/bnp/irm/: v1.py
