[tool.poetry]
name = "bnp"
version = "0.1.0"
description = ""
authors = ["Alex Lew <alexlew@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
toposort = "^1.10"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
